--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<properties>
 		<jetty.version>9.4.3.v20170317</jetty.version>
-		<spring.version>5.0.0.M5</spring.version>
+		<spring.version>5.1.3.RELEASE</spring.version>
 		<dropwizard.version>3.1.3</dropwizard.version>
 		<jersey.version>2.25.1</jersey.version>
 		<activiti.version>6.0.0</activiti.version>
